crates/hird-check/tests/snapshots/supervisors__child_types_as_actor_pid.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(&format!(\"{PLANNER_SUP}fn planner() -> Pid<PlannerMsg> ! {{}} = child(PlannerSup, planner)\")))"
---
supervisor PlannerSup ! {Tool<ReadRepo>}
