crates/hird-check/tests/snapshots/supervisors__child_unknown_id.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(&format!(\"{PLANNER_SUP}fn planner() -> Pid<PlannerMsg> ! {{}} = child(PlannerSup, ghost)\")))"
---
error[C0053] 1157..1162: supervisor `PlannerSup` declares no child with id `ghost`
supervisor PlannerSup ! {Tool<ReadRepo>}
