crates/hird-check/tests/snapshots/supervisors__child_unknown_supervisor.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"fn planner() -> Pid<PlannerMsg> ! {} = child(GhostSup, planner)\"))"
---
error[C0052] 1037..1045: `GhostSup` is not a declared supervisor
