crates/hird-check/tests/snapshots/supervisors__duplicate_supervisor_name.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: one_for_one,\n  intensity: 5,\n  period: 60,\n  children: []\n}\nsupervisor Sup {\n  strategy: one_for_one,\n  intensity: 1,\n  period: 1,\n  children: []\n}\"))"
---
error[C0046] 1107..1110: duplicate supervisor `Sup`
supervisor Sup ! {}
supervisor Sup ! {}
