crates/hird-check/tests/snapshots/supervisors__empty_children_permitted.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Idle {\n  strategy: one_for_one,\n  intensity: 1,\n  period: 5,\n  children: []\n}\"))"
---
supervisor Idle ! {}
