crates/hird-check/tests/snapshots/supervisors__group_strategies_accepted.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor AllSup {\n  strategy: one_for_all,\n  intensity: 5,\n  period: 60,\n  children: [\n    { id: planner, actor: Planner, start_args: planner_config(), restart: permanent },\n  ]\n}\nsupervisor RestSup {\n  strategy: rest_for_one,\n  intensity: 5,\n  period: 60,\n  children: [\n    { id: planner, actor: Planner, start_args: planner_config(), restart: permanent },\n  ]\n}\"))"
---
supervisor AllSup ! {Tool<ReadRepo>}
supervisor RestSup ! {Tool<ReadRepo>}
