crates/hird-check/tests/snapshots/supervisors__install_supervise_lookup_composes.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(&format!(\"{PLANNER_SUP}effect Send<t>\nfn planner_mock(args: {{ path: Path }}) -> St = St(9)\nfn main() ! {{Install, Supervise, Send<PlannerMsg>}} =\n  install {{ Tool<ReadRepo> -> planner_mock }} in\n  let u = supervise(PlannerSup) in\n  send(child(PlannerSup, planner), Stop)\")))"
---
supervisor PlannerSup ! {Tool<ReadRepo>}
