crates/hird-check/tests/snapshots/supervisors__intensity_and_period_positive.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: one_for_one,\n  intensity: 0,\n  period: sixty,\n  children: []\n}\"))"
---
error[C0046] 1047..1048: supervisor `Sup`'s `intensity` must be a positive integer
error[C0046] 1060..1065: supervisor `Sup`'s `period` must be a positive integer
supervisor Sup ! {}
