crates/hird-check/tests/snapshots/supervisors__invalid_restart.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: one_for_one,\n  intensity: 5,\n  period: 60,\n  children: [\n    { id: planner, actor: Planner, start_args: planner_config(), restart: forever },\n  ]\n}\"))"
---
error[C0046] 1087..1094: supervisor `Sup`'s child `planner` has invalid `restart`; expected `permanent`, `temporary`, or `transient`
supervisor Sup ! {Tool<ReadRepo>}
